compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__unqualified_imported_using_label.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other.{Two}\npub fn main() {\n  Two(field: 1)\n}"
---
let
  other' = builtins.import ./../other.nix;
  inherit (builtins.import ./../other.nix) Two;
  
  main = { }: Two 1;
in { inherit main; }
