compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__zero_arity_const.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "\ntype Mine {\n    This\n    ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant\n}\n\nconst this = This\nconst that = ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant\n"
---
let
  This = { __gleamTag = "This"; };
  
  ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant =
    {
      __gleamTag =
        "ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant";
    };
  
  this = This;
  
  that =
    ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant;
in { }
