compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__custom_types__zero_arity_imported_unqualified_aliased.snap
---
source: compiler-core/src/nix/tests/custom_types.rs
expression: "import other.{Two as Three}\npub fn main() {\n  Three\n}"
---
let
  other' = builtins.import ./../other.nix;
  Three = (builtins.import ./../other.nix).Two;
  
  main = { }: Three;
in
{ inherit main; }
